--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300&family=Quicksand:wght@300;500&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300&family=Poppins:wght@100&family=Quicksand:wght@300;500&family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
 
 </head>
 <body>
